2002-04-19 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/cvs.c: Added a space in the cvs command
	before the revision part. This fixes the cvs
	error we get when cvs-diffing with revisions.
	
2002-04-18 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/cvs.{h,c}, src/cvs_cbs.{h,c}, src/cvs_gui.{h,c}:
	Added a new property in cvs class to hold a boolean
	for enabling date in cvs diff. This fixed the bizzare
	diff output due to the date that goes with the cvs
	command. Also, set the default value of compression
	to 3 and unified diff option to 1.
	
2002-04-18 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/cvs.c: The diff editor is set to hilite as
	diff syntax hiliting.
	
	* configure.in, manual/Makefile.am:
	Added a new manual module for ja language.
	
	* manual/ja/*/*/*: New module and files for the
	ja translation for the anjuta documentation
	from Takeshi AIHANA <aihana@jcom.home.ne.jp>
	
2002-04-17 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/launcher.c: Made a very messy work around
	for the launcher authentication to work properly.
	
	* src/find_replace.c: Applied the missing patch
	from Dan Elphick <dre00r@ecs.soton.ac.uk>
	
2002-04-16 Andy Piper <andy.piper@freeuk.com>

	* src/cvs.c, src/main_menubar_def.h: made message strings
	consistent with existing standards from our own documentation 
	(such as uppercase P in Project, corrected spelling of 
	repository, etc.)

2002-04-16 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/cvs_gui.c: Cleaned up gui and aligned various
	widgets to give a clean look.
	
2002-04-16 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/launcher.c: Added work around to retrieve
	the child exit code. It works. :)
	
	* src/find_in_files.c, src/gnome_project.c,
	src/project_import.c, src/cvs.c, src/configure.c, src/compile.c,
	src/clean.c, src/clean_project.c, src/build_project.c,
	src/build_file.c: Modified to handle the new
	child exit code.
	
2002-04-15 Dan Elphick <dre00r@ecs.soton.ac.uk>
 